--- a/src/app/css/index.css
+++ b/src/app/css/index.css
@@ -33,6 +33,7 @@ body {
   align-items: center;
   justify-content: space-between;
   padding: 10px;
+  color: #d6f9fb;
 }
 
 .circle {
@@ -43,18 +44,22 @@ body {
   padding: 10px;
   -webkit-clip-path: circle(50% at 50% 50%);
   clip-path: circle(50% at 50% 50%);
+  transform: scale(1);
+  transition: all 0.3s ease-in-out;
 }
+
 .circle:hover {
   background-color: #ca6262;
   /*background: url("../images/download-arrow.svg");
   background-position: center;
   background-size: 90% 90%;*/
   padding: 11px;
+  transform: scale(1.1);
   -webkit-clip-path: circle(50% at 50% 50%);
   clip-path: circle(50% at 50% 50%);
-  -webkit-box-shadow: 10px 10px 61px -15px rgba(255,255,255,1);
--moz-box-shadow: 10px 10px 61px -15px rgba(255,255,255,1);
-box-shadow: 10px 10px 61px -15px rgba(255,255,255,1);
+  -webkit-box-shadow: 10px 10px 61px -15px rgba(255, 255, 255, 1);
+  -moz-box-shadow: 10px 10px 61px -15px rgba(255, 255, 255, 1);
+  box-shadow: 10px 10px 61px -15px rgba(255, 255, 255, 1);
 }
 
 .page_content {
@@ -72,9 +77,9 @@ box-shadow: 10px 10px 61px -15px rgba(255,255,255,1);
 .page_tips {
   position: absolute;
   background-color: #ca6262;
-  color: white;
+  color: #d6f9fb;
   right: 10%;
-  top: 50%;
+  top: 51%;
   z-index: 550;
   padding: 30px;
   -webkit-clip-path: polygon(0% 20%, 60% 20%, 60% 0%, 100% 50%, 60% 100%, 60% 80%, 0% 80%);
@@ -83,8 +88,8 @@ box-shadow: 10px 10px 61px -15px rgba(255,255,255,1);
 
 .cv_card {
   background-color: white;
-  height: 50vh;
-  width: 30vw;
+  height: 500px;
+  width: 350px;
   color: black;
   cursor: pointer;
   background-image: url("../images/CV_maciej_wlazlo_01.svg");
@@ -133,10 +138,12 @@ box-shadow: 10px 10px 61px -15px rgba(255,255,255,1);
 .page_info {
   position: absolute;
   bottom: 10vh;
-  left: 50%;
+  left: calc(50% - 175px);
   padding: 10px;
   font-size: 20px;
   opacity: 0;
+  text-align: center;
+  width: 350px;
 }
 
 @keyframes fadeIn {
@@ -157,7 +164,7 @@ box-shadow: 10px 10px 61px -15px rgba(255,255,255,1);
 
 .page_background {
   position: absolute;
-  left: 42%;
+  left: calc(50% - 175px);
   top: 25%;
   z-index: 50;
 }
@@ -171,4 +178,11 @@ box-shadow: 10px 10px 61px -15px rgba(255,255,255,1);
   display: flex;
   align-items: center;
   padding: 5px;
+  justify-content: space-between;
+}
+
+.footer-links{
+  text-decoration: none;
+  color: #d6f9fb;
+  font-weight: 600;
 }
