--- a/src/app/css/index.css
+++ b/src/app/css/index.css
@@ -84,6 +84,21 @@ body {
   padding: 30px;
   -webkit-clip-path: polygon(0% 20%, 60% 20%, 60% 0%, 100% 50%, 60% 100%, 60% 80%, 0% 80%);
   clip-path: polygon(0% 20%, 60% 20%, 60% 0%, 100% 50%, 60% 100%, 60% 80%, 0% 80%);
+  -moz-animation: sway 1s infinite;
+  -webkit-animation: sway 1s infinite;
+  animation: sway 1s infinite;
+}
+
+@keyframes sway {
+  0% {
+    transform: translateX(0px);
+  }
+  50% {
+    transform: translateX(20px);
+  }
+  100% {
+    transform: translateX(0px);
+  }
 }
 
 .cv_card {
@@ -98,6 +113,13 @@ body {
   -webkit-box-shadow: 10px 10px 79px -2px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 10px 10px 79px -2px rgba(0, 0, 0, 0.75);
   box-shadow: 10px 10px 79px -2px rgba(0, 0, 0, 0.75);
+  transition: box-shadow 0.3s ease-in-out;
+}
+
+.highlighted {
+  -webkit-box-shadow: 10px 10px 79px -2px rgba(205, 220, 57, 1);
+  -moz-box-shadow: 10px 10px 79px -2px rgba(205, 220, 57, 1);
+  box-shadow: 10px 10px 79px -2px rgba(205, 220, 57, 1);
 }
 
 .draggable_wrapper {
@@ -181,7 +203,7 @@ body {
   justify-content: space-between;
 }
 
-.footer-links{
+.footer-links {
   text-decoration: none;
   color: #d6f9fb;
   font-weight: 600;
